--- a/Project1.html
+++ b/Project1.html
@@ -51,7 +51,20 @@
       <h4>11 Cat Sleeping Positions & The Meaning Behind Them</h4>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas voluptates quibusdam earum pariatur. At tempora officia saepe aliquam. Iste placeat distinctio aut praesentium impedit dolores maxime quaerat quae laudantium incidunt!</p>
       <img src="2.jpg" alt="2.jpg">
+      <a href="http://"></a>
+   </header>
+
+   <header>
+      <h4>11 Cat Sleeping Positions & The Meaning Behind Them</h4>
+      <p> ipsum dolor sit amet, consectetur adipisicing elit. Veritatis voluptatibus tempore  voluptate ea dolorum expedita repellendus ipsa aperiam dignissimos fugiat ratione delectus, ad  non cum? Sequi quidem dolores facere assumenda.</p>
       <img src="foto messi.jpg" alt="foto messi.jpg">
+      <a href="http://"></a>
+   </header>
+
+   <header>
+      
+   </header>
+
    </header>
 </body>    
 </html>
